don't hold on to the job pointer, it gets passed back to us in the completion slot

BUG:227394